Fix: the font-weight is too thin to readable

--- a/app/base.css
+++ b/app/base.css
@@ -16,7 +16,7 @@ html {
   background: url('../assets/send_bg.svg');
   font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', 'segoe ui',
     'helvetica neue', helvetica, ubuntu, roboto, noto, arial, sans-serif;
-  font-weight: 200;
+  font-weight: 300;
   background-size: 110%;
   background-repeat: no-repeat;
   background-position: center top;
